# async-hwi

./: .justfile  Cargo.toml  LICENSE  README.md
.github/workflows/: main.yml
cli/: Cargo.toml  README.md
cli/src/: lib.rs
examples/: hwi.rs
src/: bip389.rs  bitbox.rs  coldcard.rs  ledger.rs  lib.rs  service.rs  specter.rs  trezor.rs  utils.rs
src/jade/: api.rs  mod.rs  pinserver.rs
tests/: ledger_speculos.rs
tests/common/: mod.rs
tests/speculos/: run.sh  versions.env
