[workspace]
members = ["cli"]

[workspace.dependencies]
async-hwi = { version = "0.0.12", path = "." }

[workspace.package]
version = "0.0.12"
edition = "2018"
authors = ["Edouard Paris <m@edouard.paris>"]
license-file = "LICENSE"
repository = "https://github.com/wizardsardine/async-hwi"
keywords = ["bitcoin"]

[package]
name = "async-hwi"
readme = "README.md"
description = "Async hardware wallet interface"
version.workspace = true
license-file.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[features]
default = ["ledger", "specter", "bitbox"]
bitbox = ["tokio", "hidapi", "bitbox-api", "regex" ]
specter = ["tokio", "tokio-serial", "serialport"]
ledger = ["regex", "tokio", "ledger_bitcoin_client", "ledger-transport-hidapi", "ledger-apdu", "hidapi"]

[dependencies]
base64 = "0.13.0"
async-trait = "0.1.52"
futures = "0.3"
bitcoin = { version = "0.30.0", default-features = false, features = ["base64", "serde", "no-std"] }

# specter
tokio-serial = { version = "5.4.1", optional = true }
serialport = { version = "4.2", optional = true }

#bitbox
bitbox-api = { version = "0.2.2", default-features = false, features = ["usb", "tokio", "multithreaded"], optional = true }

# ledger
ledger_bitcoin_client = { version = "0.3.2", optional = true }
ledger-apdu = { version = "0.10", optional = true }
ledger-transport-hidapi = { version = "0.10.0", optional = true }

#bitbox & ledger
hidapi = { version = "2.4.1", features = ["linux-static-hidraw"], default-features = false, optional = true }
regex = { version = "1.6.0", optional = true }

# specter & ledger & bitbox
tokio = { version = "1.21.0", features = ["net", "time", "io-util", "sync"], optional = true }

[dev-dependencies]
tokio = { version = "1.21", features = ["macros", "net", "rt", "rt-multi-thread", "io-util", "sync"] }
