[workspace]
members = ["cli"]

[workspace.dependencies]
async-hwi = { version = "0.0.13", path = "." }

[workspace.package]
version = "0.0.13"
edition = "2018"
authors = ["Edouard Paris <m@edouard.paris>"]
license-file = "LICENSE"
repository = "https://github.com/wizardsardine/async-hwi"
keywords = ["bitcoin"]

[package]
name = "async-hwi"
readme = "README.md"
description = "Async hardware wallet interface"
version.workspace = true
license-file.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[features]
default = ["ledger", "specter", "coldcard", "bitbox"]
bitbox = ["tokio", "hidapi", "bitbox-api", "regex"]
coldcard = ["dep:coldcard", "regex"]
specter = ["tokio", "tokio-serial", "serialport"]
ledger = ["regex", "tokio", "ledger_bitcoin_client", "ledger-transport-hidapi", "ledger-apdu", "hidapi"]
regex = ["dep:regex"]

[dependencies]
async-trait = "0.1.52"
futures = "0.3"
bitcoin = { version = "0.31", default-features = false, features = ["base64", "serde", "std"] }

# specter
tokio-serial = { version = "5.4.1", optional = true }
serialport = { version = "4.2", optional = true }

#bitbox
bitbox-api = { git = "https://github.com/edouardparis/bitbox-api-rs.git", branch = "bitcoin-0.31", default-features = false, features = ["usb", "tokio", "multithreaded"], optional = true }

#coldcard
coldcard = { version = "0.11.0", optional = true }

# ledger
ledger_bitcoin_client = { version = "0.4.0", optional = true }
ledger-apdu = { version = "0.10", optional = true }
ledger-transport-hidapi = { version = "0.10.0", optional = true }

#bitbox & ledger
hidapi = { version = "2.4.1", features = ["linux-static-hidraw"], default-features = false, optional = true }
regex = { version = "1.6.0", optional = true }

# specter & ledger & bitbox
tokio = { version = "1.21.0", features = ["net", "time", "io-util", "sync"], optional = true }

[dev-dependencies]
tokio = { version = "1.21", features = ["macros", "net", "rt", "rt-multi-thread", "io-util", "sync"] }
