[package]
name = "async-hwi-cli"
readme = "README.md"
description = "HWI CLI"
version.workspace = true
license-file.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "hwi"
path = "src/bin/hwi.rs"

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
bitcoin = "0.31"
hex = "0.4"
async-hwi = { workspace = true }
tokio = { version = "1", features = ["macros", "net", "rt", "rt-multi-thread", "io-util", "sync"] }
