[package]
name = "async-hwi-cli"
readme = "README.md"
description = "HWI CLI"
version = "0.0.22"
license-file.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "hwi"
path = "src/bin/hwi.rs"

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
bitcoin = "0.32"
hex = "0.4"
async-hwi = { path = "../", version = "0.0.29" }
tokio = { version = "1", features = ["macros", "net", "rt", "rt-multi-thread", "io-util", "sync"] }
